# deep-research-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  example_report.txt  langgraph.json  pyproject.toml  requirements.txt  run_agent.py
src/: __init__.py  a.txt  asdf.txt  b.txt  compiler.py  config.py  graph.py  planner.py  prompts.py  reflection.py  researcher.py  state.py
tests/: test_basic.py
